--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-line-auth",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Line Authentication Strategy for Passport",
   "main": "./lib",
   "scripts": {
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/IvanWei/passport-line-auth#readme",
   "engines": {
-    "node": ">= 0.4.0"
+    "node": ">= 0.4.0",
+    "yarn": ">= 0.8.0"
   },
   "dependencies": {
     "passport-oauth2": "^1.4.0"
