--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.1",
     "passport": "^0.4.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.3"
   }
 }
