add testing libraries

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Line Authentication Strategy for Passport",
   "main": "./lib",
   "scripts": {
-    "start": "node ./example/app.js"
+    "start": "node ./example/app.js",
+    "test": "npx ava --verbose",
+    "coverage": "nyc ava",
+    "demo": "node ./example/app.js"
   },
   "repository": {
     "type": "git",
@@ -12,7 +15,10 @@
   },
   "keywords": [
     "line",
-    "passport"
+    "passport",
+    "identity",
+    "auth",
+    "authentication"
   ],
   "author": "Ivan Wei <scorpionseed@gmail.com> (https://blog.ivanwei.co)",
   "license": "MIT",
@@ -28,10 +34,12 @@
     "passport-oauth2": "^1.4.0"
   },
   "devDependencies": {
+    "ava": "^0.25.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.1",
+    "nyc": "^12.0.2",
     "passport": "^0.4.0",
     "pug": "^2.0.3"
   }
