--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
   - '6'
   - '8'
   - '10'
-cache: yarn
 before_install:
   - export TZ=Asia/Taipei
   - openssl aes-256-cbc -K $encrypted_f91801d319b3_key -iv $encrypted_f91801d319b3_iv
@@ -17,6 +16,7 @@ before_install:
   - git config --global user.name "WE Bot"
   - git config --global user.email "ivanwei_slack@outlook.com"
 install:
+  - npm install -g yarn
   - yarn install
 script:
   - npm test
