--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib",
   "scripts": {
     "start": "node ./example/app.js",
-    "test": "npx ava --verbose",
+    "test": "ava --verbose",
     "coverage": "rm -rf .nyc_output && nyc ava",
     "codecov": "rm -rf .nyc_output && nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "demo": "node ./example/app.js"
