--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-sudo: false
+sudo: required
 node_js:
   - '6'
   - '8'
@@ -20,6 +20,7 @@ install:
   - yarn install
 script:
   - npm test
+  - npm run coverage
 after_success:
   - npm run codecov
 branches:
