--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ node_js:
   - '10'
 cache: yarn
 before_install:
-  - export TZ=Asia/Taipei
   - openssl aes-256-cbc -K $encrypted_f91801d319b3_key -iv $encrypted_f91801d319b3_iv
     -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
@@ -20,9 +19,10 @@ install:
 
 jobs:
   include:
-    - stage: test
+    - stage: unit test
       script: npm test
+    - state: checked coverage
       script: npm run coverage
-    - stage: Deploy coverage to Codecov
+    - stage: deploy coverage to codecov
       node_js: '10'
       script: npm run codecov
