--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
   - '6'
   - '8'
   - '10'
-cache: yarn
 before_install:
   - openssl aes-256-cbc -K $encrypted_f91801d319b3_key -iv $encrypted_f91801d319b3_iv
     -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
@@ -15,14 +14,13 @@ before_install:
   - git config --global user.name "WE Bot"
   - git config --global user.email "ivanwei_slack@outlook.com"
 install:
+  - npm install -g yarn
   - yarn install
-
-jobs:
-  include:
-    - stage: unit test
-      script: npm test
-    - state: checked coverage
-      script: npm run coverage
-    - stage: deploy coverage to codecov
-      node_js: '10'
-      script: npm run codecov
+script:
+  - npm test
+  - npm run coverage
+after_success:
+  - npm run codecov
+branches:
+  except:
+  - master
