update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
   - '6'
   - '8'
   - '10'
+cache:
+  - yarn
+  timeout: 1000
 before_install:
   - openssl aes-256-cbc -K $encrypted_f91801d319b3_key -iv $encrypted_f91801d319b3_iv
     -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
