--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
   - "6"
   - "8"
   - "10"
-cache: yarn
 before_install:
   - openssl aes-256-cbc -K $encrypted_f91801d319b3_key -iv $encrypted_f91801d319b3_iv
     -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
@@ -12,8 +11,7 @@ before_install:
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/id_rsa
   - cp .travis/ssh_config ~/.ssh/config
-  - git config --global user.name "WE Bot"
-  - git config --global user.email "ivanwei_slack@outlook.com"
+  - npm install -g yarn
 install:
   - yarn install
 
