--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-sudo: required
+sudo: false
 node_js:
   - "6"
   - "8"
@@ -21,6 +21,7 @@ jobs:
     - stage: "Codecov"
       name: "Update Codecov"
       node_js: "8"
+      sudo: required
       script:
         - npm run codecov
     # - stage: "Deploy to npm package"
