--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ jobs:
       node_js: "8"
       sudo: required
       script:
+        - npm run coverage
         - npm run codecov
     # - stage: "Deploy to npm package"
     #   node_js: "8"
