--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
     - stage: "deploy"
       name: "Deploy to npm package"
       node_js: "8"
+      if: branch = master
       script:
         - echo 'test'
 
