--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node ./example/app.js",
     "test": "ava --verbose",
     "coverage": "rm -rf .nyc_output && nyc ava",
-    "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "demo": "node ./example/app.js"
+    "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "repository": {
     "type": "git",
@@ -32,16 +31,16 @@
     "yarn": ">= 0.8.0"
   },
   "dependencies": {
-    "passport-oauth2": "^1.4.0"
+    "passport-oauth2": "^1.5.0"
   },
   "devDependencies": {
-    "ava": "^1.0.1",
+    "ava": "^1.3.1",
     "body-parser": "^1.18.2",
-    "codecov": "^3.0.4",
-    "express": "^4.16.2",
+    "codecov": "^3.2.0",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.2.1",
-    "nyc": "^13.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "nyc": "^13.3.0",
     "passport": "^0.4.0",
     "pug": "^2.0.3"
   }
