--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ava": "^3.3.0",
     "body-parser": "^1.19.0",
     "codecov": "^3.5.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
