--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        node: [10, 12, 13]
+        node: [10, 12, 14, 16, 18, 19, 20]
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
